--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jpa.properties.hibernate.use_nationalized_character_data=true
 
 # Port
 server.port=8080
+server.address=0.0.0.0
 
 # Email
 spring.mail.host=smtp.gmail.com
@@ -42,3 +43,4 @@ cloudinary.api_secret=UMH0ZH_wmGC2U5Fk0zb_xGMSMrc
 # File
 spring.servlet.multipart.max-file-size=1024MB
 spring.servlet.multipart.max-request-size=1024MB
+
